[gd_scene load_steps=7 format=3 uid="uid://2m0f4o7sf663"]

[ext_resource type="PackedScene" uid="uid://38u4fe2ahkl8" path="res://PlayerController/BasePlayer.tscn" id="2_base_player_scene"]
[ext_resource type="Script" uid="uid://bl0gaxo4ibwbd" path="res://Example_Scenes/EventBus/EventBusDemo.gd" id="4_eventbus_demo_script"]
[ext_resource type="Script" uid="uid://xcjq3y3j2wm8" path="res://Example_Scenes/LevelDemo.gd" id="5_level_demo_script"]
[ext_resource type="Script" uid="uid://cn8qm5xy2rtcd" path="res://Example_Scenes/UI/PauseMenuDemo.gd" id="6_pause_menu_script"]
[ext_resource type="Script" uid="uid://bw7360ty2y4dx" path="res://Example_Scenes/EnemyDemo.gd" id="7_enemy_demo_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulhqe"]
size = Vector2(1154, 30)

[node name="Level" type="Node2D"]
script = ExtResource("5_level_demo_script")

[node name="Floor" type="StaticBody2D" parent="."]

[node name="floorShape" type="CollisionShape2D" parent="Floor"]
position = Vector2(575, 636)
shape = SubResource("RectangleShape2D_ulhqe")

[node name="EventBusDemo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_eventbus_demo_script")

[node name="EnemyDemo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 954.0
offset_top = 10.0
offset_right = 1144.0
offset_bottom = 60.0
grow_horizontal = 0
script = ExtResource("7_enemy_demo_script")

[node name="SpawnEnemyButton" type="Button" parent="EnemyDemo"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0
text = "Spawn Enemy"

[node name="DespawnEnemiesButton" type="Button" parent="EnemyDemo"]
layout_mode = 1
offset_left = 100.0
offset_top = 5.0
offset_right = 190.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 0
text = "Despawn All"

[node name="PauseMenuDemo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 449.0
offset_top = 203.0
offset_right = 449.0
offset_bottom = 203.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("6_pause_menu_script")

[node name="Player" parent="." instance=ExtResource("2_base_player_scene")]
position = Vector2(571, 248)
